src/test/ui/dyn-trait-compatibility.stderr
error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:5:15
   |
LL | type A2 = dyn<dyn, dyn>;
   |        -      ^^^ not found in this scope
   |        |
   |        help: you might be missing a type parameter: `<dyn>`

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:5:20
   |
LL | type A2 = dyn<dyn, dyn>;
   |        -           ^^^ not found in this scope
   |        |
   |        help: you might be missing a type parameter: `<dyn>`

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:1:11
   |
LL | type A0 = dyn;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in `dyn`
  --> $DIR/dyn-trait-compatibility.rs:3:16
   |
LL | type A1 = dyn::dyn;
   |                ^^^ not found in `dyn`

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:5:11
   |
LL | type A2 = dyn<dyn, dyn>;
   |           ^^^ not found in this scope

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:9:11
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |           ^^^ not found in this scope

error[E0576]: cannot find associated type `dyn` in `dyn`
  --> $DIR/dyn-trait-compatibility.rs:9:29
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |                             ^^^ not found in `dyn`

error[E0412]: cannot find type `dyn` in this scope
  --> $DIR/dyn-trait-compatibility.rs:9:16
   |
LL | type A3 = dyn<<dyn as dyn>::dyn>;
   |                ^^^ not found in this scope

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0412, E0576.
For more information about an error, try `rustc --explain E0412`.
